--- a/public/sass/base/_utilities.scss
+++ b/public/sass/base/_utilities.scss
@@ -16,6 +16,7 @@
     }
 }
 .u-margin-top-small { margin-top: 4rem !important; }
+.u-margin-top-medium { margin-top: 5rem !important; }
 .u-margin-top-big { margin-top: 8rem !important; }
 .u-margin-top-huge { margin-top: 10rem !important; }
 .u-disappear { display: none !important; }
