--- a/public/sass/layout/_banner.scss
+++ b/public/sass/layout/_banner.scss
@@ -23,7 +23,7 @@
         
         @include respond(phone) {
             width: 100%;
-            padding: 0ex;
+            padding: 0;
         }
         
     }
